--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~12.0.1",
     "@capacitor/core": "3.0.0",
     "@ionic/angular": "^5.5.2",
-    "rxjs": "~6.6.0",
+    "@swimlane/ngx-datatable": "^19.0.0",
+    "chart.js": "^3.3.0",
+    "ng2-search-filter": "^0.5.1",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
